# squirrel

.github/scripts/: generate_report.py
.github/workflows/: code-analysis.yml
crates/core/: Cargo.toml
docs/: IDEALISM.md  architecture.md  codebase-stabilization-plan.md  competitive-analysis.md  crate_restructuring.md  dependency-injection-patterns.md  external-integration-plan.md  migration-completion.md  migration-final-report.md  stabilization-remaining-issues.md  test-suite-modernization-plan.md  ui-integration-plan.md
docs/LongTermPlanning/phase2/: SPECS_P2.md  phase2-supercharge.md
docs/archive/: FUTURE.md  REVIEW.md  deadlock-analysis.md  implementation_plan.md  stabilization-next-steps.md  stabilization-progress.md  standard-procedures.md  test-failures-resolution-plan.md  test-suite-modernization-plan.md
docs/codeReview/: CORE_TEAM_REVIEW.md  MCP_TEAM_REVIEW.md  RULE_ADHERENCE_REVIEW.md  UI_TEAM_REVIEW.md
docs/income/: README.md  ai-dev-tools.md  automated-solo-plan.md  consulting.md  rule-engine.md  security-assessment.md  solo-starter-plan.md  training.md
docs/integration/: INDEX.md  PRACTICAL.md  README.md  TECHNICAL.md
docs/phase3/: phase3-real-world.md
docs/rust_crates/: sysinfo-0.30.md
docs/teamchat/: README.md  UI-001-issue-core-api-integration.md
specs/: SPECS.md
specs/context/: FOLLOWUP_TASKS.md  PROGRESS_UPDATE.md  TEAMCHAT.md
specs/integration/: PATTERNS.md  README.md  async-concurrency-integration.md  mcp-context-integration.md
specs/patterns/: async-programming.md
specs/plugins/: ASYNC_MUTEX_REFACTORING.md
(+8 files in other folders)
