[package]
name = "squirrel-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core functionality for Squirrel"

[dependencies]
# Core dependencies
tokio = { workspace = true, features = ["full"], optional = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Logging dependencies
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = "0.4.26"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
mockall = { workspace = true }
criterion = { workspace = true }
insta = { workspace = true }
snapbox = { workspace = true }
proptest = { workspace = true }

[features]
default = ["async"]
di-tests = []
async = ["dep:tokio"]

[lib]
name = "squirrel_core"
path = "src/lib.rs"

[build-dependencies]
built = "0.7"
